--- a/index.html
+++ b/index.html
@@ -563,39 +563,39 @@
             letter-spacing: -1px;
         }
 
-        /* 博客标题区域 */
+        /* 博客标题区域 - Dankoe风格 */
         .blog-header {
             text-align: center;
-            margin-bottom: 4rem;
-            padding: 3rem 0;
-            border-bottom: 2px solid var(--border);
+            margin-bottom: 5rem;
+            padding: 5rem 0 3rem;
         }
 
         .blog-title {
-            font-size: 3.5rem;
-            font-weight: 800;
-            letter-spacing: 8px;
-            margin-bottom: 1rem;
-            background: linear-gradient(135deg, #3b82f6, #8b5cf6);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            font-size: 5rem;
+            font-weight: 900;
+            letter-spacing: 0.05em;
+            margin-bottom: 0.5rem;
+            color: var(--text-primary);
+            font-family: 'Georgia', 'Times New Roman', serif;
+            text-transform: uppercase;
         }
 
         .blog-subtitle {
-            font-size: 1.4rem;
-            color: var(--text-secondary);
-            margin-bottom: 1.5rem;
-            font-weight: 500;
+            font-size: 1.8rem;
+            color: var(--text-primary);
+            margin-bottom: 2rem;
+            font-weight: 300;
+            letter-spacing: 0.02em;
         }
 
         .blog-quote {
-            font-size: 1.2rem;
-            color: var(--text-primary);
-            font-style: italic;
-            max-width: 700px;
+            font-size: 1.1rem;
+            color: var(--text-secondary);
+            font-style: normal;
+            max-width: 600px;
             margin: 0 auto;
-            line-height: 1.8;
+            line-height: 1.6;
+            font-weight: 400;
         }
 
         /* 文章网格 */
@@ -1094,21 +1094,23 @@
             }
 
             .blog-header {
-                padding: 2rem 0;
+                padding: 3rem 0;
+                margin-bottom: 3rem;
             }
 
             .blog-title {
-                font-size: 2.5rem;
-                letter-spacing: 4px;
+                font-size: 3rem;
+                letter-spacing: 0.03em;
             }
 
             .blog-subtitle {
-                font-size: 1.2rem;
+                font-size: 1.4rem;
             }
 
             .blog-quote {
                 font-size: 1rem;
                 padding: 0 1rem;
+                font-weight: 400;
             }
 
             .subscribe-form {
@@ -2409,9 +2411,9 @@
     <section class="content-section" id="articles">
         <!-- 博客标题区域 -->
         <div class="blog-header">
-            <h1 class="blog-title" data-zh="博客" data-en="THE BLOG">博客</h1>
+            <h1 class="blog-title" data-zh="BLOG" data-en="BLOG">博客</h1>
             <p class="blog-subtitle" data-zh="探索你的好奇心" data-en="Explore Your Curiosity">探索你的好奇心</p>
-            <p class="blog-quote" data-zh="“深入思考是一种稀有的能力，持续成长是一生的旅程。”" data-en=""Deep thinking is a scarce ability, continuous growth is a lifelong journey."">"深入思考是一种稀有的能力，持续成长是一生的旅程。"</p>
+            <p class="blog-quote" data-zh="深入思考是一种稀有的能力，持续成长是一生的旅程。" data-en="Deep thinking is a scarce ability, continuous growth is a lifelong journey.">深入思考是一种稀有的能力，持续成长是一生的旅程。</p>
         </div>
 
         <div class="articles-grid" id="articlesGrid">
